# project-templates

data_conda_torch_1/: cookiecutter.json
data_conda_torch_1/{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  environment.yml  pyproject.toml
data_conda_torch_1/{{cookiecutter.project_slug}}/.github/workflows/: run_tests.yaml
data_poetry_1/: cookiecutter.json
data_poetry_1/{{cookiecutter.project_slug}}/: .flake8  LICENSE  Makefile  README.rst  pyproject.toml
