[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.initial_version}}"
requires-python = "^{{cookiecutter.python_version}}"
dependencies = []
dynamic = ["version", "dependencies"]
authors = [{name = "{{cookiecutter.author}}"}]
description = "{{cookiecutter.description}}"
readme = "README.rst"
license = {file = "LICENSE"}

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
