[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.initial_version}}"
authors = [{name = "{{cookiecutter.author}}"}]
description = "{{cookiecutter.description}}"
readme = "README.rst"
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
