[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.initial_version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]
readme = "README.rst"
packages = [
  {include = "{{cookiecutter.project_slug}}"},
  {include = "tests"}
  ]
license = "MIT"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.group.test.dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
